--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+	<script>
+  			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  				})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  			ga('create', 'UA-105084672-1', 'auto');
+  			ga('send', 'pageview');
+		</script>
   	<link href="https://fonts.googleapis.com/css?family=Cookie" rel="stylesheet">
   	<link href="https://fonts.googleapis.com/css?family=Raleway:700,800" rel="stylesheet">
   	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
